servies(seim,apivapt),development-5pages

--- a/bautomate.html
+++ b/bautomate.html
@@ -354,9 +354,9 @@ Icon for services and Projects -->
                 <h2>Accreditation</h2>
                 <p>Bautomate: Your trusted partner for accredited hyperautomation solutions</p>
                 <div class="logos-partner">
-                    <img src="images/bautomate-main/bautomate-partner-1.png" alt="SOC 2 Type 2">
-                    <img src="images/bautomate-main/bautomate-partner-2.png" alt="ISO 27001">
-                    <img style="height:150px;width:250px;" src="images/bautomate-main/bautomate-partner-3.png"
+                    <img src="images/bautomate-main/bautomate-partner-1.webp" alt="SOC 2 Type 2">
+                    <img src="images/bautomate-main/bautomate-partner-2.webp" alt="ISO 27001">
+                    <img style="height:150px;width:250px;" src="images/bautomate-main/bautomate-partner-3.webp"
                         alt="HIPAA Compliant">
                 </div>
             </section>
