--- a/enquiry-automation.html
+++ b/enquiry-automation.html
@@ -79,7 +79,6 @@
         style="background-image: url('images/bautomate-main/enquiry-banner.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <!-- Content Section -->
         <div class="banner-business-content">
-
             <h2 class="banner-business-subtitle">Effortlessly Streamline Enquiries with AI-Driven <span
                     class="enquiry-higlight">Automation for Freight Forwarding</span> </h2>
             <p class="banner-business-description">
@@ -91,6 +90,11 @@
             </div>
         </div>
     </div>
+
+        <!-- center image section -->
+        <div class="center-container-freightimg">
+            <img src="images/bautomate-main/enquiry-centerimg.png" alt="Centered Image" class="center-image-freight">
+          </div>
 
     <!-- /* 2nd section enquiry freight */ -->
     <div class="enquiry-freight">
