--- a/oee-monitoring.html
+++ b/oee-monitoring.html
@@ -266,7 +266,7 @@
       <div class="page-content">
         <section>
           <div class="container">
-            <div class="row justify-content-center text-center mb-5">
+            <div class="row justify-content-center text-center mb-5 pt-5">
               <div class="col-lg-8 col-md-12">
                 <div class="theme-title">
                   <h6>Benefits</h6>
@@ -275,7 +275,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row pb-4">
               <!-- First Row -->
               <div class="col-lg-3 col-md-6">
                 <div class="featured-item style-4">
@@ -303,7 +303,7 @@
                   </div>
                   <div class="featured-desc">
                     <div class="featured-title">
-                      <h5>Plan Shift Closures</h5>
+                      <h5>Plan Shift Closures Management</h5>
                     </div>
                     <p class="text-center">
                       Enable shift managers to make informed decisions based on
@@ -321,7 +321,7 @@
                   </div>
                   <div class="featured-desc">
                     <div class="featured-title">
-                      <h5>Optimize Productivity</h5>
+                      <h5>Optimize Workforce Productivity</h5>
                     </div>
                     <p class="text-center">
                       Minimize downtimes, maintain manufacturing pace, and
@@ -619,7 +619,7 @@
 
         <!-- use case starts -->
 
-        <section class="pt-10" style="padding-top: 1px !important">
+        <section class="pt-10 pb-5" style="padding-top: 1px !important; padding-bottom: 3% !important;">
           <div class="container">
             <div class="row justify-content-center text-center mb-5">
               <div class="col-lg-8 col-md-12 pt-5">
