--- a/asset-tracking-with-ble-beacon.html
+++ b/asset-tracking-with-ble-beacon.html
@@ -187,7 +187,7 @@
 
 <section>
     <div class="container">
-        <div class="row justify-content-center text-center mb-5">
+        <div class="row justify-content-center text-center mb-5 pt-6">
             <div class="col-lg-8 col-md-12">
                 <div class="theme-title">
                     <h6>Benefits</h6>
@@ -248,18 +248,26 @@
 </section>
 
 
-<section class="p-0">
+  <!-- Book now -->
+
+  <section class="p-0 mt-5">
     <div class="container">
       <div class="row justify-content-center text-center mb-5">
         <div class="col-lg-8 col-md-12">
-          <div class="d-md-flex align-items-center rounded-pill border border-primary p-3 ps-5">
-          <h5 class="mb-0 me-4">Experience InnoMaint in Action!</h5>
-          <a href="contact.html"><div class="rounded-pill bg-primary py-2 px-10 ms-auto"><h6 class="mb-0">Request a Demo</h6></div></a>
-        </div>
+          <div class="d-flex align-items-center justify-content-between rounded-pill border border-primary p-3 ps-5">
+            <h5 class="mb-0">Experience Innomaint in action!</h5>
+            <a href="contact.html">
+              <div class="rounded-pill bg-primary py-2 px-4">
+                <h6 class="mb-0 text-white">Get in Touch</h6>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
   </section>
+  
+
 
 <!-- feature starts -->
 
