--- a/bigdata-consulting-services.html
+++ b/bigdata-consulting-services.html
@@ -134,7 +134,7 @@
 <!--blog start-->
 <section>
     <div class="container">
-        <div class="row justify-content-center text-center mb-5">
+        <div class="row justify-content-center text-center mb-5 pt-8">
             <div class="col-lg-8 col-md-12">
                 <div class="theme-title">
                     <h6>Our services</h6>
@@ -253,7 +253,7 @@
 
 <section class="pt-10" style="padding-top: 1px !important;">
   <div class="container">
-    <div class="row justify-content-center text-center mb-5">
+    <div class="row justify-content-center text-center mb-5 pt-8">
       <div class="col-lg-8 col-md-12">
         <div class="theme-title">
           <h6>Our Solutions</h6>
