--- a/cloud-infrastructure.html
+++ b/cloud-infrastructure.html
@@ -239,10 +239,14 @@ Icon for services and Projects -->
   <div class="container">
     <div class="row justify-content-center text-center mb-5">
       <div class="col-lg-8 col-md-12">
-        <div class="d-md-flex align-items-center rounded-pill border border-primary p-3 ps-5">
-        <h5 class="mb-0 me-4">Want To Secure Your Cloud Infrastructure Smartly?</h5>
-        <a href="contact.html"><div class="rounded-pill bg-primary py-2 px-10 ms-auto"><h6 class="mb-0">Get in Touch</h6></div></a>
-      </div>
+        <div class="d-flex align-items-center justify-content-between rounded-pill border border-primary p-3 ps-5">
+          <h5 class="mb-0 text-left">Want To Secure Your Cloud Infrastructure Smartly?</h5>
+          <a href="contact.html">
+            <div class="rounded-pill bg-primary py-2 px-4">
+              <h6 class="mb-0 text-white">Get in Touch</h6>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
