--- a/innomaint.html
+++ b/innomaint.html
@@ -182,7 +182,7 @@
       <div class="page-content">
         <section>
           <div class="container">
-            <div class="row justify-content-center text-center mb-5">
+            <div class="row justify-content-center text-center mb-5 pt-8">
               <div class="col-lg-8 col-md-12">
                 <div class="theme-title">
                   <h6>Benefits</h6>
@@ -191,7 +191,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row pb-5">
               <!-- First Row -->
               <div class="col-lg-3 col-md-6">
                 <div class="featured-item style-4">
@@ -218,7 +218,7 @@
                   </div>
                   <div class="featured-desc">
                     <div class="featured-title">
-                      <h5>Achieve Cost Savings</h5>
+                      <h5>Achieve Cost Savings Efficiently.</h5>
                     </div>
                     <p class="text-center">
                         Optimize resource use and asset longevity, lowering operating expenses over time.
@@ -245,7 +245,7 @@
               </div>
 
               <!-- Second Row -->
-              <div class="col-lg-3 col-md-6">
+              <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="featured-item style-4">
                   <div class="featured-icon">
                     <i class="fi fi-rs-user-experience"></i>
