--- a/team-collaboration-solution.html
+++ b/team-collaboration-solution.html
@@ -163,7 +163,7 @@
 
 <section>
     <div class="container">
-        <div class="row justify-content-center text-center mb-5">
+        <div class="row justify-content-center text-center mb-5 pt-6">
             <div class="col-lg-8 col-md-12">
                 <div class="theme-title">
                     <h6>Benefits</h6>
