--- a/web-and-mobile-application.html
+++ b/web-and-mobile-application.html
@@ -210,7 +210,7 @@ Icon for services and Projects -->
                   </div>
                   <div class="featured-desc">
                       <div class="featured-title">
-                          <h5>Secure iOS Extensions</h5>
+                          <h5>Secure iOS App Extensions</h5>
                       </div>
                       <p>We protect business-critical data with secure iOS app extensions</p>
                   </div>
@@ -226,7 +226,7 @@ Icon for services and Projects -->
                 </div>
                 <div class="featured-desc">
                     <div class="featured-title">
-                        <h5>OS Hardening</h5>
+                        <h5>OS Hardening Techniques</h5>
                     </div>
                     <p>We implement secure configurations to safeguard your applications</p>
                 </div>
@@ -243,10 +243,14 @@ Icon for services and Projects -->
   <div class="container">
     <div class="row justify-content-center text-center mb-5">
       <div class="col-lg-8 col-md-12">
-        <div class="d-md-flex align-items-center rounded-pill border border-primary p-3 ps-5">
-        <h5 class="mb-0 me-4">Want To Secure Your Web and Mobile Application Smartly?</h5>
-        <a href="contact.html"><div class="rounded-pill bg-primary py-2 px-10 ms-auto"><h6 class="mb-0">Get in Touch</h6></div></a>
-      </div>
+        <div class="d-flex align-items-center justify-content-between rounded-pill border border-primary p-3 ps-5">
+          <h5 class="mb-0 text-left">Want To Secure Your Web and Mobile Application Smartly?</h5>
+          <a href="contact.html">
+            <div class="rounded-pill bg-primary py-2 px-4">
+              <h6 class="mb-0 text-white">Get in Touch</h6>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
