change the css in chnage.css preventing the confluicts and added the navbar for the cyber secruity services making clear nnavigations for all and fixed bugs in these pages

--- a/header.html
+++ b/header.html
@@ -319,6 +319,31 @@
                         </li>
                       </ul>
                     </li>
+                    <li class="dropdown-submenu">
+                      <a
+                        class="dropdown-item dropdown-toggle"
+                        href="vapt.html"
+                        >Cyber Security Services</a
+                      >
+                      <ul class="dropdown-menu-sub">
+                        <li>
+                          <a class="dropdown-item" href="network-infrastructure.html">Network Infrastructure</a>
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="web-and-mobile-application.html">Web and Mobile App</a>
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="cloud-infrastructure.html">Cloud Infrastructure</a>
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="apivapt.html">API VAPT</a>
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="seim&threat-intelligence.html">SIEM & Threat Intelligence</a>
+                        </li>
+                      </ul>
+                    </li>
+                    
                     <li>
                       <a class="dropdown-item" href="error-404.html"
                         >Software Testing & QA</a
