datascience,data analytics page done

--- a/react-native-development.html
+++ b/react-native-development.html
@@ -129,6 +129,7 @@ Icon for services and Projects -->
     <div class="overlay-pricing">
       <div class="content-pricing">
         <h1 class="title-pricing">React Native Development</h1>
+        <p class="subheading-pricing">React Native Development enables cross-platform mobile apps for iOS and Android using a single JavaScript codebase, ensuring efficiency.</p>
       </div>
     </div>
   </section>
