--- a/customer-relationship.html
+++ b/customer-relationship.html
@@ -351,7 +351,7 @@ Icon for services and Projects -->
 
 
     <!-- Benefits -->
-    <section>
+    <section style="margin-top: 5rem;">
       <div class="container">
         <div class="row justify-content-center text-center mb-5">
           <div class="col-lg-8 col-md-12">
@@ -537,7 +537,7 @@ Icon for services and Projects -->
     <section class="background-gray">
       <div class="row justify-content-center text-center mb-5">
         <div class="col-lg-8 col-md-12">
-          <div class="theme-title">
+          <div class="theme-title" style="margin-top: 5rem">
             <h6>Our Features</h6>
             <h2>Features of Innomaint EAM Solution</h2>
           </div>
@@ -1282,11 +1282,11 @@ Icon for services and Projects -->
     </div>
 
 
-    <section>
+    <section style="margin: 5rem 0;">
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-12 mb-6 mb-lg-0 order-lg-1 ps-lg-5">
-            <h3 class="text-center">Frequently Asked Questions</h3>
+            <h3 class="text-center" style="margin-bottom: 3rem">Frequently Asked Questions</h3>
             <div class="accordion" id="accordion">
               <div class="accordion-item bg-transparent mb-4">
                 <h3 class="accordion-header" id="heading1">
