--- a/data-analytics-solutions.html
+++ b/data-analytics-solutions.html
@@ -166,7 +166,7 @@ Icon for services and Projects -->
                       <span class="feature-number">01</span>
                   </div>
                   <div class="featured-desc">
-                      <div class="featured-title">
+                      <div class="featured-title services-datatitle">
                           <h5>Server Migration Services</h5>
                       </div>
                       <p>Advanced Analytics (NLP,Computer Vision, Cognitive Data Capture)
@@ -185,7 +185,7 @@ Icon for services and Projects -->
                       <span class="feature-number">02</span>
                   </div>
                   <div class="featured-desc">
-                      <div class="featured-title">
+                      <div class="featured-title services-datatitle">
                           <h5>Data Engineering
                       </div>
                       <p>Building EDW/Data Estate from scratch Support and Enhancements
@@ -204,7 +204,7 @@ Icon for services and Projects -->
                       <span class="feature-number">03</span>
                   </div>
                   <div class="featured-desc">
-                      <div class="featured-title">
+                      <div class="featured-title services-datatitle">
                           <h5>Cloud Migration Projects</h5>
                       </div>
                       <p>Cloud Migration
@@ -222,7 +222,7 @@ Icon for services and Projects -->
                     <span class="feature-number">04</span>
                 </div>
                 <div class="featured-desc">
-                    <div class="featured-title">
+                    <div class="featured-title services-datatitle">
                         <h5>Business Intelligence</h5>
                     </div>
                     <p>Reporting and Analytics
