--- a/data-science-services.html
+++ b/data-science-services.html
@@ -167,10 +167,10 @@ Icon for services and Projects -->
                       <span class="feature-number">01</span>
                   </div>
                   <div class="featured-desc">
-                      <div class="featured-title">
+                      <div class="featured-title services-datatitle">
                           <h5>Data Strategy Development</h5>
                       </div>
-                      <p>Consultants help organizations develop a data strategy that aligns with their business goals and objectives. This includes identifying data sources, defining data governance policies, and setting up data infrastructure.</p>
+                      <p style="text-align:justify;">Consultants help organizations develop a data strategy that aligns with their business goals and objectives. This includes identifying data sources, defining data governance policies, and setting up data infrastructure.</p>
                   </div>
               </div>
           </div>
@@ -183,7 +183,7 @@ Icon for services and Projects -->
                       <span class="feature-number">02</span>
                   </div>
                   <div class="featured-desc">
-                      <div class="featured-title">
+                      <div class="featured-title services-datatitle">
                           <h5>Data Analysis And Visualization
                       </div>
                       <p>Consultants use data analysis techniques to identify trends and patterns in data, and then create visualizations that help clients easily interpret and understand the data.</p>
@@ -199,7 +199,7 @@ Icon for services and Projects -->
                       <span class="feature-number">03</span>
                   </div>
                   <div class="featured-desc">
-                      <div class="featured-title">
+                      <div class="featured-title services-datatitle">
                           <h5>Machine Learning And Predictive Modeling</h5>
                       </div>
                       <p>Consultants use machine learning algorithms and predictive modeling techniques to develop models that can help organizations forecast future trends and make more accurate predictions.</p>
@@ -215,7 +215,7 @@ Icon for services and Projects -->
                     <span class="feature-number">04</span>
                 </div>
                 <div class="featured-desc">
-                    <div class="featured-title">
+                    <div class="featured-title services-datatitle">
                         <h5>Optimization And Process Improvement</h5>
                     </div>
                     <p>Consultants use data science techniques to identify areas of improvement in client processes and operations, and then develop recommendations for optimization and process improvement.</p>
@@ -401,9 +401,18 @@ Icon for services and Projects -->
         The technical stack used for data science can vary greatly depending on the specific needs and requirements of the organization. SMI expertise will help you in identifying the right tool 
         for you need that can effectively handle large volumes of data, provide accurate insights, and drive business value.
     </p>
-    <div class="image-container-iosprocess datascience-logo">
-        <img src="images/development-services/datascience-logoimg.png" alt="Image with iosprocess" class="image-iosprocess">
-      </div>              
+    
+    <div class="datascience-logo-row">
+      <img src="images/development-services/datascience-logo-1.png" alt="Logo 1" class="datascience-fiverow">
+      <img src="images/development-services/datascience-logo-2.jpg" alt="Logo 1" class="datascience-fiverow">
+      <img src="images/development-services/datascience-logo-3.png" alt="Logo 1" class="datascience-fiverow">
+      <img src="images/development-services/datascience-logo-4.png" alt="Logo 1" class="datascience-fiverow">
+      <img src="images/development-services/datascience-logo-5.webp"  alt="Logo 5" class="datascience-fiverow">
+      <img src="images/development-services/datascience-logo-6.png"  alt="Logo 6" class="datascience-fiverow">
+      <img src="images/development-services/datascience-logo-7.png"  alt="Logo 7" class="datascience-fiverow">
+      <img src="images/development-services/datascience-logo-8.jpg" alt="Logo 8" class="datascience-fiverow">
+    </div>
+    
 </div>
 
 
