Alignment fix in IVR Page

--- a/ivr-automation.html
+++ b/ivr-automation.html
@@ -224,7 +224,7 @@ Icon for services and Projects -->
             <div class="featured-title">
                 <h6 class="gradientText" style="margin-bottom: 1rem;">We know what’s happening</h6>
             </div>
-            <p>
+            <p style="text-align: center;">
                 Our team of experts knows how to test and measure call quality with precision and intelligence.
             </p>
             </div>
@@ -237,7 +237,7 @@ Icon for services and Projects -->
             <div class="featured-title">
                 <h6 class="gradientText" style="margin-bottom: 1rem;">Trust that’s earned over time</h6>
             </div>
-            <p>
+            <p style="text-align: center;">
                 Don’t take our word for it – just check out our reviews by happy customers!
             </p>
             </div>
@@ -250,7 +250,7 @@ Icon for services and Projects -->
             <div class="featured-title">
                 <h6 class="gradientText" style="margin-bottom: 1rem;">A partner who can adapt</h6>
             </div>
-            <p>
+            <p style="text-align: center;">
                 We don’t lock you into a contract – instead, we provide flexible pricing models that make sense for your business.
             </p>
             </div>
