--- a/header.html
+++ b/header.html
@@ -215,7 +215,7 @@
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
+                          <a class="dropdown-item" href="database-migration.html"
                             >Database Migration Services</a
                           >
                         </li>
@@ -234,42 +234,42 @@
                     <li class="dropdown-submenu">
                       <a
                         class="dropdown-item dropdown-toggle"
-                        href="error-404.html"
+                        href="#"
                         >Development Services</a
                       >
                       <ul class="dropdown-menu-sub">
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
+                          <a class="dropdown-item" href="custom-software-development.html"
                             >Custom Software Development</a
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
+                          <a class="dropdown-item" href="mobile-app-development.html"
                             >Mobile App Development</a
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
+                          <a class="dropdown-item" href="custom-web-application-development.html"
                             >Custom Web App Development</a
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
+                          <a class="dropdown-item" href="php-development.html"
                             >PHP Development</a
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
+                          <a class="dropdown-item" href="dot-net-development.html"
                             >Dotnet Development</a
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
+                          <a class="dropdown-item" href="php-development.html"
                             >React Native Development</a
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
+                          <a class="dropdown-item" href="cross-platform-mobile-app-development.html"
                             >Cross Platform App Development</a
                           >
                         </li>
