"Updated links in header.html, replacing 'error-404.html' with specific page URLs."

--- a/header.html
+++ b/header.html
@@ -274,12 +274,12 @@
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
+                          <a class="dropdown-item" href="ios-app-development.html"
                             >IOS App Development</a
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
+                          <a class="dropdown-item" href="android-app-development.html"
                             >Android App Development</a
                           >
                         </li>
@@ -288,7 +288,7 @@
                     <li class="dropdown-submenu">
                       <a
                         class="dropdown-item dropdown-toggle"
-                        href="error-404.html"
+                        href="#"
                         >Advanced Analytics</a
                       >
                       <ul class="dropdown-menu-sub">
@@ -303,12 +303,12 @@
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
+                          <a class="dropdown-item" href="data-engineering-services.html"
                             >Data Engineering Services</a
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
+                          <a class="dropdown-item" href="cloud-migration-solutions.html"
                             >Cloud Migration Solutions</a
                           >
                         </li>
@@ -345,12 +345,12 @@
                     </li>
                     
                     <li>
-                      <a class="dropdown-item" href="error-404.html"
+                      <a class="dropdown-item" href="software-testing.html"
                         >Software Testing & QA</a
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="error-404.html"
+                      <a class="dropdown-item" href="ui-ux-design.html"
                         >UI/UX Design Services</a
                       >
                     </li>
@@ -438,7 +438,7 @@
                           <a class="dropdown-item dropdown-toggle" href="#">Solutions</a>
                           <ul class="dropdown-menu">
                             <li class="dropdown-submenu">
-                              <a class="dropdown-item dropdown-toggle" href="intelligent-document-processing.html">Intelligent Document Processing</a>
+                              <a class="dropdown-item dropdown-toggle" href="#">Intelligent Document Processing</a>
                               <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="accounts-payable-automation.html">Accounts Payable Automation</a></li>
                                 <li><a class="dropdown-item" href="invoice-processing-automation.html">Invoice Processing Automation</a></li>
