Murali's updates pages

--- a/bigdata-consulting-services.html
+++ b/bigdata-consulting-services.html
@@ -257,7 +257,7 @@
       <div class="col-lg-8 col-md-12">
         <div class="theme-title">
           <h6>Our Solutions</h6>
-          <h2>Driving Projects From Ideation To Value-Driven Software Solutions</h2>
+          <h2 class="mt-5 mb-4">Driving Projects From Ideation To Value-Driven Software Solutions</h2>
         </div>
       </div>
     </div>
