--- a/Enterprise-asset-management-software.html
+++ b/Enterprise-asset-management-software.html
@@ -295,7 +295,7 @@ Icon for services and Projects -->
 
 
   <section>
-    <div class="container">
+    <div class="container mt-10">
         <div class="row justify-content-center text-center mb-5">
             <div class="col-lg-8 col-md-12">
                 <div class="theme-title">
@@ -360,7 +360,7 @@ Icon for services and Projects -->
 </section>
   
 
-<section class="background-gray">
+<section class="background-gray mt-10">
     <div class="row justify-content-center text-center mb-5">
         <div class="col-lg-8 col-md-12">
           <div class="theme-title">
