changes,image added

--- a/robotic-process-automation.html
+++ b/robotic-process-automation.html
@@ -214,7 +214,7 @@
     <section class="Industries-robotics ">
         <div class="row justify-content-center text-center mb-5">
             <div class="col-lg-8 col-md-12">
-              <div class="theme-title">
+              <div class="theme-title space-robotic">
                 <h2>Implementation of <span class="insustries-title">BPA</span> with  <span class="insustries-title">RPA</span> in Different Industries.</h2>
               </div>
             </div>
